<resources>
    <string name="app_name">ECommerce</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="u_name">Username</string>
    <string name="pass">Password</string>
    <string name="Login">Login</string>
    <string name="lost_password">Lost password?</string>
    <string name="new_user">New user sign up </string>
    <string name="login_with">OR LOGIN WITH</string>
    <string name="new_user_top">New user sign up</string>
    <string name="mobile">Mobile number</string>
    <string name="sign_up"> sign up</string>
    <string name="verification">Verification code will be sent to mobile number. \n please enter a valid mobile number.</string>
    <string name="already_account">Already have an account?</string>
    <string name="almost_done">Almost done!</string>
    <string name="verify_code">Verification code</string>
    <string name="new_pass">New password</string>
    <string name="retype_pass">Re-type new password</string>
    <string name="resend_verify">Resend verification code</string>
    <string name="terms">Terms of use</string>
    <string name="help">Help / FAQ</string>
    <string name="about">About Meayo</string>
    <string name="back">Back</string>
    <string name="img_desc">Image</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="item_des"> \u2022 Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n
        \u2022  Pellentesque ut odio mollis, lacinia elit in, dapibus enim.\n
        \u2022  Curabitur sit amet diam nec odio pharetra tincidunt sed non dolor.\n
        \u2022  Integer vitae nisl pulvinar, euismod nisl sed, pulvinar tellus.\n
        \u2022  Nam id diam interdum tellus hendrerit consectetur.\n
        \u2022  Cras dictum nunc id diam rutrum congue.</string>
</resources>
