<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.billiontags.ecom.activity.Register">


    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:gravity="center"
        android:text="@string/new_user_top"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_16sdp" />

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/u_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/u_name"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/txt_black"
                android:textColorHint="@color/txt_gray" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/gray"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/txt_black"
                android:textColorHint="@color/txt_gray" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sign_up"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/bottom_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/verification"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_9sdp" />

    <TextView
        android:id="@+id/bottom_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/already_account"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_12sdp" />
</RelativeLayout>
