<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_45sdp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:srcCompat="@drawable/b_logo" />

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/_21sdp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/u_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/u_name"
            android:maxLength="15"
            android:maxLines="1"
            android:nextFocusDown="@+id/pass_code"
            android:singleLine="true"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_gray" />
        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/gray"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/button_effect"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/pass_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/txt_black"
                android:textColorHint="@color/txt_gray" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginTop="@dimen/_14sdp"
        android:gravity="center"
        android:text="@string/new_user"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/lost_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/orwith"
        android:layout_marginBottom="@dimen/_18sdp"
        android:gravity="center"
        android:text="@string/lost_password"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:id="@+id/orwith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_bottom"
        android:layout_marginBottom="@dimen/_7sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".3"
            android:background="@color/gray"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_orwith"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/login_with"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".3"
            android:background="@color/gray"
            android:visibility="visible" />
    </LinearLayout>

    <include
        android:id="@+id/login_bottom"
        layout="@layout/login_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
